# perfometer

./: LICENSE.txt  README.md  pyproject.toml
perfometer/: __init__.py  _core.py
